# Genetic

./: CMakeCache.txt  CMakeLists.txt  GenoType.cpp  GenoType.h  GenoType_test.cpp  Makefile  cmake_install.cmake  install_manifest.txt  population.cpp  population.h  setup
UnitTest/: CMakeLists.txt  GenoType_test.cpp
inc/: Genetic.h
src/: CMakeLists.txt  Genetic.h.in  GenoType.cpp  GenoType_test  GenoType_test.cpp  Makefile  a.out  cmake_install.cmake  population.cpp
